# Drosophila

./: .gitignore  AUTHORS.md  README.md  SOURCES.txt  requirements.txt  setup.py  statistics.py
Drosophila/: __init__.py  __version__.py  process.py
Drosophila/viewer/: dynplot.py
final_codes/: 01 - running_mean_comparison.py  02 - vel_dir_changes_and_orientation.py  03 - stats_of_bars_creation.py  04 - graphs_velocity_and_velocity_direction.py  05 - duration_movement_and_stop.py  06 - distance_to_closest_fly.py  07 - random_walk_creation.py  08 - trail_extraction.py  09 - distance_to_wall.py  10 - rectifiability.py  11 - region_labeling.py  12 - network.py  13 - duration_meeting.py  14 - probability_of_meeting.py
statistics/: statistics.py
viewer/: CMakeLists.txt  build.ps1  build.sh  viewer.cpp
viewer/include/: circles.h  draw.h  drosophila.h
viewer/src/: circles.cpp
